--- a/web/.gitignore
+++ b/web/.gitignore
@@ -9,3 +9,7 @@
 /vendor/
 ###< symfony/framework-bundle ###
 .env
+###> pentatrion/vite-bundle ###
+/node_modules/
+/public/build/
+###< pentatrion/vite-bundle ###
